[project]
name = "rlalgo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kINo", email = "kinobhu@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "gymnasium[classic-control]>=1.2.3",
    "torch>=2.9.1",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
